--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -14,8 +14,7 @@ jobs:
       - name: List changed directories
         id: find-module
         run: |
-          filenames=$(git diff --name-only HEAD ${{ github.event.pull_request.base.sha }})
-          echo "Os arquivos modificados são: $filenames"
+          git diff --name-only HEAD ${{ github.event.pull_request.base.sha }}
 
       - name: Environment Configuration
         uses: actions/setup-java@v1
