--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -14,7 +14,7 @@ jobs:
       - name: List changed directories
         id: find-module
         run: |
-          git diff --name-only HEAD ${{ github.event.pull_request.base.sha }}
+          git diff --name-only HEAD
 
       - name: Environment Configuration
         uses: actions/setup-java@v1
