--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -9,7 +9,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+         fetch-depth: 2  # OR "2" -> To retrieve the preceding commit.
 
       # Example 1
       - name: Get changed files
