--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -10,19 +10,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-         fetch-depth: 50  # OR "2" -> To retrieve the preceding commit.
-
-      # Example 1
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v35
 
       - name: List all changed files
         run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            echo "$file was changed"
-          done
+          git fetch origin pull/${{ github.event.pull_request.number }}/head
+          git diff --name-only HEAD...${{ github.event.pull_request.head.sha }} | grep automation/
 
       - name: Environment Configuration
         uses: actions/setup-java@v1
