--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -14,8 +14,5 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Listar Alterações
-        run: |
-          git diff --name-only HEAD^ HEAD > arquivos.txt
-          sed -e 's|/.*||g' arquivos.txt | awk 'NF' | sort -u > diretorios.txt
-          echo "Os seguintes diretórios foram alterados nesta pull request:"
-          cat diretorios.txt
+      - run: echo check=`git diff --name-only HEAD^ | grep -o ".*-automation\/" | uniq `
+      - run: echo "Chages on ${{check}}"
