--- a/auxiliar-connector/pom.xml
+++ b/auxiliar-connector/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>auxiliar</artifactId>
+    <artifactId>auxiliar-connector</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
