--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>auxiliar</module>
-        <module>support</module>
+        <module>auxiliar-connector</module>
+        <module>support-connector</module>
     </modules>
 
     <properties>
