--- a/support-connector/pom.xml
+++ b/support-connector/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>support</artifactId>
+    <artifactId>support-connector</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
