--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -14,10 +14,13 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Listar Alterações
-        run: |
-          check=$(git diff --name-only HEAD^ | grep -E ".*-connector/" | awk -F/ '{print $1}' | uniq)
-          if [ -n "$check" ]; then
-            echo "Changes on $check"
-          else
-            echo "No changes found"
-          fi
+        run: echo git diff --name-only HEAD^
+
+#      - name: Listar Alterações
+#        run: |
+#          check=$(git diff --name-only HEAD^ | grep -E ".*-connector/" | awk -F/ '{print $1}' | uniq)
+#          if [ -n "$check" ]; then
+#            echo "Changes on $check"
+#          else
+#            echo "No changes found"
+#          fi
