--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Listar Alterações
         run: | 
-          git diff --name-only HEAD^
+          git diff --name-only HEAD~
 
 #      - name: Listar Alterações
 #        run: |
