--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -13,7 +13,9 @@ jobs:
           submodules: 'recursive'
           path: '/home/runner/work/automation/automation'
 
-      - name: Listar Diretórios Alterados
+      - name: Check if directory exists
         run: |
-          cd /home/runner/work/automation/automation
-          git diff --name-only HEAD~1..HEAD | xargs -n 1 dirname | sort -u
+          if [ ! -d "/home/runner/work/automation/automation" ]; then
+            echo "Directory does not exist"
+            exit 1
+          fi
