--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -12,4 +12,4 @@ jobs:
 
       - name: Listar diretórios modificados
         run: |
-          git diff --name-only origin/main...${{ github.event.pull_request.head.ref }} | sed 's|/.*||' | sort -u
+          git diff --name-only origin/master...${{ github.event.pull_request.head.ref }} | sed 's|/.*||' | sort -u
