--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -1,4 +1,4 @@
-name: Listar diretórios modificados em pull request
+name: Test
 
 on: [push]
 
@@ -11,9 +11,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Listar diretórios modificados
-        run: |
-          git fetch origin master
-          diretorios_modificados=$(git diff --name-only $(git merge-base FETCH_HEAD ${{ github.event.pull_request.head.ref }})...${{ github.event.pull_request.head.ref }} | sed 's|/.*||' | sort -u)
-          for dir in $diretorios_modificados; do
-            echo "Diretório modificado: $dir"
-          done
+        env:
+          Dirs: ${{git diff --name-only HEAD}}
+        run: echo "Thats all changes $Dirs"
