--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -11,6 +11,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Listar diretórios modificados
-        run: echo "Thats all changes $Dirs"
-        env:
-          Dirs: ${{git diff --name-only HEAD}}
+        run: echo "Thats all changes ${{git diff --name-only HEAD}}"
