--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -11,4 +11,5 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Listar diretórios modificados
-        run: echo "Thats all changes ${{git diff --name-only HEAD}}"
+        run: |
+          echo "Thats all changes ${{git diff --name-only HEAD}}"
