--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -9,7 +9,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
 
       - name: Listar diretórios modificados
         run: |
-          echo "Thats all changes ${{ git diff --name-only HEAD }}"
+          git diff --name-only HEAD
