--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -15,3 +15,4 @@ jobs:
       - name: Listar diretórios modificados
         run: |
           git diff --name-only HEAD^
+          check=git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq
