--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -14,5 +14,5 @@ jobs:
 
       - name: Listar diretórios modificados
         run: |
-          git diff --name-only HEAD^
-          check=git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq
+          check = ${{ git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq }}
+          echo "Name is: ${{check}}"
