--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -14,5 +14,4 @@ jobs:
 
       - name: Listar diretórios modificados
         run: |
-          check = git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq
-          echo "Name is: ${{check}}"
+          git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq
