--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Build Changes
 
 on: [push]
 
@@ -7,11 +7,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Preparing Environment
+        uses: actions/setup-java@v1
+        with:
+          java-version: '8.0.192' # The JDK version to make available on the path. Takes a whole or semver JDK version, or 1.x syntax (e.g. 1.8 => Jdk 8.x). To specify a specific version for JDK 8 or older use the following pattern (8.0.x)
+          java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
+          architecture: x64 # (x64 or x86) - defaults to x64
+
+      - name: Checkout Code
         uses: actions/checkout@v2
         with:
           fetch-depth: 2
 
-      - name: Listar diretórios modificados
+      - name: List Changed Modules
         run: |
-          git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq
+          git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniqmvn >> $GITHUB_OUTPUT
+        id: list_modules
+
+      - name: Build Projects
+        run: |
+          mvn --projects ${{steps.list_modules.outputs.*}} --also-make install
