--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: List Changed Modules
         run: |
-          echo "git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq" >> $GITHUB_OUTPUT
+          git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq
         id: list_modules
 
       - name: Build Projects
