--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -26,4 +26,5 @@ jobs:
 
       - name: Build Projects
         run: |
-          mvn --projects ${{steps.list_modules.outputs}} --also-make install
+          modules=$(echo "${{steps.list_modules.outputs.modules}}" | tr '\n' ',')
+          mvn --projects $modules --also-make install
