--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -27,4 +27,5 @@ jobs:
       - name: Build Projects
         run: |
           modules=$(echo "${{steps.list_modules.outputs.modules}}" | tr '\n' ',')
+          echo "Building the following modules: $modules"
           mvn --projects $modules --also-make install
