--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -22,6 +22,7 @@ jobs:
       - name: List Changed Modules
         run: |
           modules=$(git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq)
+          echo "::set-output name=modules::$modules"
           echo "Modules changed: $modules"
         id: list_modules
 
