--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Build Projects
         run: |
           mvn --projects ${{steps.list_modules.outputs.modules}} --also-make install
-          echo "Building the following modules: ${{steps.list_modules.outputs.modules}}"
+          echo "Building the following modules: $(echo "${{steps.list_modules.outputs.modules}}" | tr '\n' ',')"
