--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -28,5 +28,5 @@ jobs:
 
       - name: Build Projects
         run: |
-          mvn --projects ${{steps.list_modules.outputs.modules}} --also-make install
-          echo "Building the following modules: $(echo "${{steps.list_modules.outputs.modules}}" | tr '\n' ',')"
+          mvn --projects $(echo "${{needs.list_modules.outputs.modules}}" | tr '\n' ',') --also-make install
+          echo "Building the following modules: $(echo "${{needs.list_modules.outputs.modules}}" | tr '\n' ',')"
