--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -28,5 +28,5 @@ jobs:
 
       - name: Build Projects
         run: |
-          mvn --projects $(${{needs.list_modules.outputs.modules}} | tr '\n' ',') --also-make install
-          echo "Building the following modules: ${{needs.list_modules.outputs.modules}}"
+          modules="${{steps.list_modules.outputs.modules}}"
+          echo "Modules: $modules"
