Test build more than one module

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -28,9 +28,8 @@ jobs:
 
       - name: Build Projects
         run: |
-          echo "Modules to be built: ${steps.list_modules.outputs.modules}"
-          for module in ${steps.list_modules.outputs.modules}
+          echo "Modules to be built: ${{steps.list_modules.outputs.modules}}"
+          for module in ${{steps.list_modules.outputs.modules}}
           do
             echo "Building module: $module"
-            # comando de compilação para cada módulo aqui
           done
