Test build more than one module

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           modules=$(git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq | sed 's/\/$//')
           echo "Modules changed: $modules"
-          echo "MODULES=$modules" >> $GITHUB_ENV
+          echo "MODULES={modules}" >> $GITHUB_OUTPUT
 
       - name: Build Projects
         run: |
-          echo "Modules to be built: ${{ env.MODULES }}"
+          echo "Modules to be built: ${{ steps.list_modules.outputs.MODULES }}"
