Test build more than one module

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -23,8 +23,9 @@ jobs:
         id: list_modules
         run: |
           modules=$(git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq | sed 's/\/$//')
+          test="gabriel rafa"
           echo "Modules changed: $modules"
-          echo "MODULES=$modules" >> $GITHUB_OUTPUT
+          echo "MODULES=$test" >> $GITHUB_OUTPUT
 
       - name: Build Projects
         run: |
