--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -23,7 +23,7 @@ jobs:
         id: list_modules
         run: |
           modules=$(git diff --name-only HEAD^ | grep -o ".*-connector\/" | uniq | sed 's/\/$//')
-          test="gabriel rafa"
+          test="gabriel-rafa"
           echo "Modules changed: $modules"
           echo "MODULES=$test" >> $GITHUB_OUTPUT
 
