Test build more than one module

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Get latest release tag
         run: |
+          git fetch --tags
           latestRelease=$(git describe --abbrev=0 --tags)
           echo "Latest Release: $latestRelease"
           echo "latest_release=$latestRelease" >> $GITHUB_OUTPUT
