--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Get latest release tag
         run: |
           git fetch --tags
-          latestRelease=$(git describe --abbrev=0 --tags)
+          latestRelease=$(git describe --abbrev=0 --tags --always)
           echo "Latest Release: $latestRelease"
           echo "latest_release=$latestRelease" >> $GITHUB_OUTPUT
         id: get_latest_release
