Test execute autotag tag

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -41,5 +41,7 @@ jobs:
             mvn --projects $modules --also-make install
           fi
 
+      - name: Giving permission
+        run: chmod +x ./scripts/autotag.sh
       - name: Execute Auto Tag
         run: ./scripts/autotag.sh
