Test execute autotag tag

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Get latest release tag
         run: |
+          git checkout master
           git fetch --tags
           git describe --tags
 
