--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Increment tag
         id: increment_tag
         run: |
+          echo "Base Tag: ${{ steps.get_latest_release.outputs.latest_release }}"
           VERSION_BITS=(${{ steps.get_latest_release.outputs.latest_release }}//./)
           VNUM1=${VERSION_BITS[0]}
           VNUM2=${VERSION_BITS[1]}
