--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -18,13 +18,13 @@ jobs:
           git fetch --tags 
           latest_tag=$(git describe --abbrev=0 --tags)
           echo "last tag: $latest_tag"
-          echo "new_tag=$latest_tag" >> $GITHUB_OUTPUT
+          echo "latest=$latest_tag" >> $GITHUB_OUTPUT
 
       - name: Increment tag
         id: increment_tag
         run: |
-          echo "Base Tag: ${{ steps.get_latest_release.outputs.new_tag }}"
-          VERSION_BITS=(${{ steps.get_latest_release.outputs.new_tag }}//./)
+          echo "Base Tag: ${{ steps.get_latest_release.outputs.latest }}"
+          VERSION_BITS=(${{ steps.get_latest_release.outputs.latest }}//./)
           VNUM1=${VERSION_BITS[0]}
           VNUM2=${VERSION_BITS[1]}
           VNUM3=${VERSION_BITS[2]}
